--- a/package.json
+++ b/package.json
@@ -119,7 +119,10 @@
       ]
     }
   },
-  "eslintIgnore": ["node_modules/", "lib/"],
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
   "prettier": {
     "quoteProps": "consistent",
     "singleQuote": true,
@@ -130,6 +133,16 @@
   "@react-native-community/bob": {
     "source": "src",
     "output": "lib",
-    "targets": ["commonjs", "module", "typescript"]
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
+  },
+  "dependencies": {
+    "@react-aria/button": "^3.3.0",
+    "@react-aria/checkbox": "^3.2.1",
+    "@react-aria/focus": "^3.2.3",
+    "@react-stately/toggle": "^3.2.1"
   }
 }
