--- a/package.json
+++ b/package.json
@@ -145,7 +145,10 @@
     "@react-aria/button": "^3.3.0",
     "@react-aria/checkbox": "^3.2.1",
     "@react-aria/focus": "^3.2.3",
+    "@react-aria/radio": "^3.1.2",
+    "@react-aria/visually-hidden": "^3.2.1",
     "@react-stately/checkbox": "^3.0.1",
+    "@react-stately/radio": "^3.2.1",
     "@react-stately/toggle": "^3.2.1"
   }
 }
