--- a/package.json
+++ b/package.json
@@ -45,21 +45,25 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-plugin": "^1.1.0",
     "@release-it/conventional-changelog": "^1.1.4",
+    "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitlint": "^8.3.5",
-    "eslint": "^7.2.0",
+    "eslint": "^7.15.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-test-renderer": "^17.0.1",
     "release-it": "^13.5.8",
     "typescript": "^3.8.3"
   },
@@ -73,6 +77,9 @@
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/",
       "<rootDir>/src/@react-aria"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
     ]
   },
   "husky": {
