--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
+    "accessibility-testing-utils": "^1.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitlint": "^8.3.5",
     "eslint": "^7.15.0",
