--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "homepage": "https://github.com/geekyants/react-native-aria#readme",
   "devDependencies": {
     "@commitlint/config-conventional": "^8.3.4",
-    "@react-native-community/bob": "^0.16.2",
+    "@react-native-community/bob": "^0.17.1",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.1.0",
     "@release-it/conventional-changelog": "^1.1.4",
@@ -62,11 +62,11 @@
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.2.1",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "16.13.1",
+    "react-native": "0.63.4",
     "react-test-renderer": "^17.0.1",
-    "release-it": "^13.5.8",
-    "typescript": "^3.8.3"
+    "release-it": "^14.2.2",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -135,12 +135,20 @@
     "@react-aria/button": "^3.3.0",
     "@react-aria/checkbox": "^3.2.1",
     "@react-aria/focus": "^3.2.3",
+    "@react-aria/i18n": "^3.2.0",
+    "@react-aria/listbox": "^3.2.3",
+    "@react-aria/menu": "^3.1.3",
+    "@react-aria/overlays": "^3.6.0",
     "@react-aria/radio": "^3.1.2",
+    "@react-aria/select": "^3.2.3",
+    "@react-aria/selection": "^3.3.1",
     "@react-aria/switch": "^3.1.1",
     "@react-aria/toggle": "^3.1.1",
     "@react-aria/visually-hidden": "^3.2.1",
     "@react-stately/checkbox": "^3.0.1",
+    "@react-stately/collections": "^3.3.0",
     "@react-stately/radio": "^3.2.1",
+    "@react-stately/select": "^3.1.1",
     "@react-stately/toggle": "^3.2.1",
     "react-dom": "^17.0.1",
     "react-native-web": "^0.14.10"
