--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react-native": "0.63.4",
     "accessibility-testing-utils": "^1.0.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitlint": "^8.3.5",
@@ -134,6 +134,7 @@
   "dependencies": {
     "@react-aria/button": "^3.3.0",
     "@react-aria/checkbox": "^3.2.1",
+    "@react-aria/dialog": "^3.1.2",
     "@react-aria/focus": "^3.2.3",
     "@react-aria/i18n": "^3.2.0",
     "@react-aria/listbox": "^3.2.3",
