--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@react-stately/select": "^3.1.1",
     "@react-stately/toggle": "^3.2.1",
     "react-dom": "^17.0.1",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "^0.14.10"
   }
 }
