--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "@react-aria/switch": "^3.1.1",
     "@react-aria/toggle": "^3.1.1",
     "@react-aria/visually-hidden": "^3.2.1",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-stately/checkbox": "^3.0.1",
     "@react-stately/collections": "^3.3.0",
     "@react-stately/radio": "^3.2.1",
