--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-native-aria",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Component behaviour hooks for React Native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/src/index.d.ts",
+  "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
@@ -85,7 +86,10 @@
   },
   "eslintIgnore": [
     "node_modules/",
-    "lib/"
+    "lib/",
+    "example/webpack.config.js",
+    "example/babel.config.js",
+    "example/metro.config.js"
   ],
   "husky": {
     "hooks": {
