--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "exclude": ["node_modules", "public", "example", "src/@react-aria"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
@@ -22,7 +23,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext",
-  },
-  "exclude": ["src/@react-aria"]
+    "target": "esnext"
+  }
 }
