--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react-native": "0.63.4",
     "react-test-renderer": "^17.0.1",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3"
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -87,9 +87,7 @@
   "eslintIgnore": [
     "node_modules/",
     "lib/",
-    "example/webpack.config.js",
-    "example/babel.config.js",
-    "example/metro.config.js"
+    "example"
   ],
   "husky": {
     "hooks": {
