--- a/example/package.json
+++ b/example/package.json
@@ -14,12 +14,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/hooks": "^2.6.0",
     "expo": "^40.0.0",
     "expo-splash-screen": "~0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.14.9"
   },
