--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,7 @@
     "expo-splash-screen": "~0.8.1",
     "react-native": "0.63.4",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.14.9"
+    "react-native-web": "^0.15.0"
   },
   "devDependencies": {
     "@babel/core": "~7.12.10",
