feat: aria to accessibility map

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "expo": "^40.0.0",
     "expo-splash-screen": "~0.8.1",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.14.9"
+    "react-native-web": "^0.15.0"
   }
 }
