--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -4,7 +4,7 @@
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
-  "typings": "lib/typescript/src/index.d.ts",
+  "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
