--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -4,7 +4,7 @@
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
-  "typings": "lib/typescript/src/index.d.ts",
+  "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
@@ -48,7 +48,10 @@
   },
   "dependencies": {
     "@react-stately/tooltip": "3.0.1",
-    "@react-aria/tooltip": "3.1.0"
+    "@react-aria/tooltip": "3.1.0",
+    "@react-native-aria/utils": "^0.2.1",
+    "@react-aria/utils": "^3.5.0",
+    "@react-native-aria/interactions":"^0.2.1"
   },
   "peerDependencies": {
     "react": "*",
