--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@react-native-aria/checkbox",
+  "name": "@react-native-aria/combobox",
   "version": "0.2.3",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
+  "types": "lib/typescript/index.d.ts",
   "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
@@ -45,13 +46,6 @@
   "homepage": "https://github.com/intergalacticspacehighway/react-native-bob-mono#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
-  },
-  "dependencies": {
-    "@react-aria/checkbox": "^3.2.1",
-    "@react-aria/utils": "^3.6.0",
-    "@react-native-aria/toggle": "^0.2.3",
-    "@react-native-aria/utils": "^0.2.3",
-    "@react-stately/toggle": "^3.2.1"
   },
   "peerDependencies": {
     "react": "*",
