--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -51,6 +51,14 @@
     "react": "*",
     "react-native": "*"
   },
+  "dependencies": {
+    "@react-aria/combobox": "^3.0.0-alpha.1",
+    "@react-aria/utils": "^3.6.0",
+    "@react-aria/live-announcer": "^3.0.0-alpha.0",
+    "@react-types/button": "^3.3.1",
+    "@react-aria/overlays": "^3.6.1",
+    "@react-native-aria/utils": "^0.2.3"
+  },
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
