--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "expo-splash-screen": "~0.8.1",
     "patch-package": "^6.2.2",
     "react-native": "0.63.4",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "^0.15.0"
   },
