fix: useTable hook

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -13,7 +13,10 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "paths": {
-      "@react-native-aria/*": ["../packages/*/src/index"]
-    },
-  }
+      "@react-native-aria/*": [
+        "../packages/*/src/index"
+      ]
+    }
+  },
+  "extends": "expo/tsconfig.base"
 }
