--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/table",
-  "version": "0.2.4",
+  "version": "0.0.1-alpha.0",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -47,14 +47,14 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@react-aria/utils": "^3.11.2",
-    "@react-aria/table": "^3.11.2",
-    "@react-native-aria/interactions": "^0.2.3",
-    "@react-stately/table": "^3.2.1",
     "@react-aria/grid": "^3.2.1",
     "@react-aria/i18n": "^3.2.1",
-    "@react-types/shared": "^3.2.1",
-    "@react-native-aria/utils": "^0.2.8"
+    "@react-aria/table": "^3.11.2",
+    "@react-aria/utils": "^3.11.2",
+    "@react-native-aria/interactions": "^0.2.3",
+    "@react-native-aria/utils": "^0.2.8",
+    "@react-stately/table": "^3.2.1",
+    "@react-types/shared": "^3.2.1"
   },
   "peerDependencies": {
     "react": "*",
